# autoAi

./: .gitignore  .sav  README.md  __init__.py  approx.py  autoImputer.py  deepModel.py  fireAutoML.py  main.py  mlmath.py  modelling.py  pyproject.toml  setup.cfg  setup.py  truth.py
deepmodel.sav/: saved_model.pb
deepmodel.sav/variables/: variables.data-00000-of-00001  variables.index
fireAutoML.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fireml/: README.md  __init__.py  autoImputer.py  cli.py  data_loader.py  deepModel.py  evaluation.py  fireAutoML.py  main.py  main_pipeline.py  mlmath.py  modelling.py  settings.json  settings.py  setup.py  truth.py  utils.ipynb  utils.py
fireml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
fireml/models/: __init__.py  classifiers.py  deep_learning.py  regressors.py
fireml/preprocessing/: __init__.py  autoImputer.py  data_augmentation.py  feature_engineering.py
fireml/utils/: __init__.py  helpers.py  logging_config.py  mlmath.py  validation.py
fireml/web/: app.py
output/: ABC_model.joblib  GNB_model.joblib  KNC_model.joblib  MLP_model.joblib  RFC_model.joblib  SVC_model.joblib  VotingClassifier.joblib  XGB_model.joblib
perfect.sav/: saved_model.pb
perfect.sav/variables/: variables.data-00000-of-00001  variables.index
poor.sav/: keras_metadata.pb  saved_model.pb
poor.sav/variables/: variables.data-00000-of-00001  variables.index
truedeepModel.sav/: keras_metadata.pb  saved_model.pb
truedeepModel.sav/variables/: variables.data-00000-of-00001  variables.index
