[metadata]
name = fireAutoML
version = 0.1
description = A module for rapidly building ML models
long_description = file: README.rst
url = https://www.dtenny95.wixsite.com/fire_bc
author = Akinrotimi Daniel Feyisola
author_email = dtenny95@gmail.com
license = BSD-3-Clause 
classifiers =
Environment :: Terminal Environment
Intended Audience :: Developers
License :: OSI Approved :: BSD License
Operating System :: OS Independent
Programming Language :: Python

Topic :: Machine Learning  
[options]
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    tensorflow >= 2.0
    pandas  >= 1.3.5
    numpy   >=1.21.4
    sklearn >= 1.0.1
    xgboost >= 1.5.1